unpackaged/main/default/objects/Course__c/fields/Course_Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Course_Prerequisites__c</fullName>
    <label>Course Prerequisites</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rhetoric &amp; Research I</fullName>
            </value>
            <value>
                <fullName>Spanish I</fullName>
            </value>
            <value>
                <fullName>Spanish II</fullName>
            </value>
            <value>
                <fullName>Pre-Calculus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>