unpackaged/main/default/objects/Course__c/fields/hasGroupAPrerequisites__c.field-meta.xml
<CustomField>
    <fullName>hasGroupAPrerequisites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasGroupAPrerequisites</label>
    <type>Checkbox</type>
</CustomField>