unpackaged/main/default/objects/Course__c/fields/hasGroupBPrerequisites__c.field-meta.xml
<CustomField>
    <fullName>hasGroupBPrerequisites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasGroupBPrerequisites</label>
    <type>Checkbox</type>
</CustomField>