unpackaged/main/default/objects/Course__c/fields/hasGroupCPrerequisites__c.field-meta.xml
<CustomField>
    <fullName>hasGroupCPrerequisites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasGroupCPrerequisites</label>
    <type>Checkbox</type>
</CustomField>