unpackaged/main/default/objects/Course__c/fields/hasGroupDPrerequisites__c.field-meta.xml
<CustomField>
    <fullName>hasGroupDPrerequisites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasGroupDPrerequisites</label>
    <type>Checkbox</type>
</CustomField>