unpackaged/main/default/objects/Course__c/fields/hasGroupEPrerequisites__c.field-meta.xml
<CustomField>
    <fullName>hasGroupEPrerequisites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasGroupEPrerequisites</label>
    <type>Checkbox</type>
</CustomField>