unpackaged/main/default/objects/Course__c/fields/hasGroupFPrerequisites__c.field-meta.xml
<CustomField>
    <fullName>hasGroupFPrerequisites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasGroupFPrerequisites</label>
    <type>Checkbox</type>
</CustomField>