unpackaged/main/default/objects/Course__c/fields/hasPrerequisites__c.field-meta.xml
<CustomField>
    <fullName>hasPrerequisites__c</fullName>
    <formula>Number_Of_Prerequisites__c != 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hasPrerequisites</label>
    <type>Checkbox</type>
</CustomField>