unpackaged/main/default/objects/Course__c/fields/Highest_Prerequisite_Group__c.field-meta.xml
<CustomField>
    <fullName>Highest_Prerequisite_Group__c</fullName>
    <label>Highest Prerequisite Group</label>
    <length>1</length>
    <type>Text</type>
</CustomField>