unpackaged/main/default/objects/Course__c/fields/Number_Of_Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Prerequisites__c</fullName>
    <label>Number Of Prerequisites</label>
    <summaryForeignKey>Course_Prerequisite__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>