unpackaged/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>hasPrerequisites__c</columns>
    <columns>Course_Prerequisites__c</columns>
    <columns>Course_Type__c</columns>
    <columns>Highest_Prerequisite_Group__c</columns>
    <columns>Number_Of_Prerequisites__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>