unpackaged/main/default/objects/Course__c/listViews/All_Partners.listView-meta.xml
<ListView>
    <fullName>All_Partners</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All - Partners</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>